[gd_scene load_steps=11 format=3 uid="uid://m0grdck1ywqo"]

[ext_resource type="Theme" uid="uid://cx4ebwibnxeqt" path="res://assets/themes/main.tres" id="1_03n7f"]
[ext_resource type="Script" uid="uid://c7v2sxrsmoob8" path="res://entities/hud/pause_menu/pause_menu.gd" id="2_qp6lq"]
[ext_resource type="Texture2D" uid="uid://dlp25yu8gyl5k" path="res://assets/sprites/ui/select_icon_5.png" id="3_5h01g"]
[ext_resource type="PackedScene" uid="uid://jxvd5gh4tcb8" path="res://entities/hud/music_switch/music_switch.tscn" id="4_q6aya"]

[sub_resource type="AtlasTexture" id="AtlasTexture_61qlu"]
atlas = ExtResource("3_5h01g")
region = Rect2(0, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_840rd"]
atlas = ExtResource("3_5h01g")
region = Rect2(12, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_6cvkc"]
atlas = ExtResource("3_5h01g")
region = Rect2(24, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_72k0i"]
atlas = ExtResource("3_5h01g")
region = Rect2(36, 0, 12, 12)

[sub_resource type="AtlasTexture" id="AtlasTexture_pdi4e"]
atlas = ExtResource("3_5h01g")
region = Rect2(48, 0, 12, 12)

[sub_resource type="SpriteFrames" id="SpriteFrames_wiae1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_61qlu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_840rd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6cvkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_72k0i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pdi4e")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_03n7f")
script = ExtResource("2_qp6lq")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.176471)

[node name="SelectIcon" type="AnimatedSprite2D" parent="."]
position = Vector2(488, 210)
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_wiae1")
autoplay = "default"

[node name="PauseLabel" type="Label" parent="."]
layout_mode = 2
offset_left = 416.0
offset_top = 128.0
offset_right = 736.0
offset_bottom = 180.0
theme_override_font_sizes/font_size = 72
text = "PAUSED"
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = -132.0
offset_right = 160.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_03n7f")
theme_override_constants/separation = 10

[node name="ResumeButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../../MusicSwitch")
focus_neighbor_bottom = NodePath("../BackToMenuButton")
text = "Resume"
language = "en_US"

[node name="BackToMenuButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../ResumeButton")
focus_neighbor_bottom = NodePath("../QuitButton")
text = "Main Menu"
language = "en_US"

[node name="QuitButton" type="Button" parent="Buttons"]
layout_mode = 2
focus_neighbor_top = NodePath("../BackToMenuButton")
focus_neighbor_bottom = NodePath("../../MusicSwitch")
text = "Quit
"
language = "en_US"

[node name="MusicSwitch" parent="." instance=ExtResource("4_q6aya")]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -77.0
offset_right = -54.0
grow_horizontal = 0
scale = Vector2(3, 3)
focus_neighbor_top = NodePath("../Buttons/QuitButton")
focus_neighbor_bottom = NodePath("../Buttons/ResumeButton")

[connection signal="focus_entered" from="Buttons/ResumeButton" to="." method="_on_resume_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/ResumeButton" to="." method="_on_resume_button_mouse_entered"]
[connection signal="pressed" from="Buttons/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="focus_entered" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_mouse_entered"]
[connection signal="pressed" from="Buttons/BackToMenuButton" to="." method="_on_back_to_menu_button_pressed"]
[connection signal="focus_entered" from="Buttons/QuitButton" to="." method="_on_quit_button_focus_entered"]
[connection signal="mouse_entered" from="Buttons/QuitButton" to="." method="_on_quit_button_mouse_entered"]
[connection signal="pressed" from="Buttons/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="focus_entered" from="MusicSwitch" to="." method="_on_music_switch_focus_entered"]
[connection signal="mouse_entered" from="MusicSwitch" to="." method="_on_music_switch_mouse_entered"]
